--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -51,7 +51,7 @@ To provide fast, intuitive, and comprehensive tooling for menu-driven games.
 ### Inspiration
 
 - The [SCUMM game engine](https://www.gamedeveloper.com/design/the-scumm-diary-stories-behind-one-of-the-greatest-game-engines-ever-made). See the **Learning SCUMM** and **The SCUMM advantage** sections of the linked article.
-- The Sleipnir game engine, which was used for a variety of [Adventure games](https://hogs.fandom.com/wiki/Boomzap_Entertainment). It supported hidden object ane various puzzle mechanics.
+- The Sleipnir game engine, which was used for a variety of [Adventure games](https://hogs.fandom.com/wiki/Boomzap_Entertainment). It supported hidden object and various puzzle mechanics.
 
 ### Credits
 
@@ -60,4 +60,4 @@ To provide fast, intuitive, and comprehensive tooling for menu-driven games.
 
 ### No-GenAI, no-LLM philosophy
 
-**No GenAI or LLM tools** are used to create any content or code for this project. Nor are GenAI or LLM tools in **any** part of the development pipeline, **not even for placeholders**.
+**No GenAI or LLM tools** are used to create any content or code for this project. Nor are GenAI or LLM tools in **any** part of the development pipeline, **not even for placeholders or brainstorming**.
