--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -58,6 +58,6 @@ To provide fast, intuitive, and comprehensive tooling for menu-driven games.
 - GIIN was created and is actively developed by [@urbanpidgeon](https://github.com/urbanpidgeon).
 - GIIN logo asset designed by Rochak Shukla on freepik.com.
 
-### No-GenAI, no-LLM philosophy
+### Additional notes
 
-**No GenAI or LLM tools** are used to create any content or code for this project. Nor are GenAI or LLM tools in **any** part of the development pipeline, **not even for placeholders or brainstorming**.
+This project does not use GenAI or LLM tools. 
