--- a/docs/src/content/docs/blog/devblog002.mdx
+++ b/docs/src/content/docs/blog/devblog002.mdx
@@ -9,7 +9,56 @@ import { Image } from 'astro:assets';
 
 _[tk should have an image]_
 
-The environment of a game is largely controlled by invisible sliders, dials, and levers. How do we game designers know to what setting these controls should be? By identifying **core factors**, we're able to set a goal or ideal towards which we can set initial values and then playtest and tweak for.
+The environment of a game is largely controlled by invisible sliders, dials, and levers. How do we game designers know what values to set? By identifying some anchors or constraints, we're able to set a goal or ideal towards which we can set initial values and then playtest and tweak for.
+
+## Establishing the size of a game
+
+Outside of games, how does one decide on the size of a project? Say a home improvement project, such as building a small climbing wall. What factors decide how big can be? Safety, surely, and also the hard constraint of your floor size. Once you've found a place for it, you'll have to figure out how many panels and studs and holds you'll need. As with anything else, you are faced with the ancient need to balance a book.
+
+### Working backwards with a budget 
+
+### Working forwards with the smallest possible game loop
+
+A chessboard has 64 squares, or 2^6. If we increase the chessboard size to 128, or 2^7, we know instinctively that we should scale the movement of knights, pawns, and kings. (Would scaling their movement by ^2 retain their utility?)
+
+It's also easy for us to agree that in _general_: 
+
+- All other things being equal, a large map in StarCraft where the players are situated at opposite ends, will take longer to finish than a smaller map.
+- A 3vs3 Pokemon battle will be shorter than a full 6vs6.
+
+> The average completion of a core loop, such as a battle, is measured in the **average number of moves** made to complete the loop.
+
+Let's say we want an RPG player-versus-player game to be about 3-5 minutes long.
+
+Let's say that player A and player B use similar characters: 
+
+| Character lineup | Atk | HP |
+| -------  | ------ | ------ |
+| Character 1 | 5    | 100 |
+| Character 2 | 9    | 75  |
+| Character 3 | 5    | 120 |
+| Character 4 | 7    | 90  |
+
+**Total HP**: 385
+
+**Total Atk**: 26
+
+Dividing the **total HP by the **total Atk** gives us an idea of how many turns you'd have to hit the opposite party.
+
+It comes out to 14.81, or **15 turns of solid attacking** to knock out 4 characters. There are 2 players. So at a minimum, 30 turns.
+
+Computing for game length:
+
+| Game length | Turns per minute | Seconds per turn |
+| -------  | ------ | ------ | 
+| 3 minutes long | 10 turns | 6 seconds |
+| 5 minutes long | 6 turns | 10 seconds |
+
+Inagine deciding on the actions of 4 characters in 6 seconds! It's evident that the HP is too high or the Atk is too low. Now that we know how to compute for the number of turns, let's try to keep it to 6 turns by reducing the HP.
+
+Let's get the total HP to end a party in 6 turns: 26 (total **Atk**) * 6 = 156. That's a reduction of 229 HP spread over the entire party, or a baseline of about 57HP per character. Some characters will have more HP and less **Atk**. But that's a problem for later. For now, let's take a look at the turns per minute and seconds per turn:
+
+
 
 Normalization in game design ensures that stats (health, speed, power, et cetera) are balanced and meaningful across the board.
 
@@ -70,47 +119,6 @@ By setting these variables or constants in one place, such as a constants file, 
 (For those with a background in database design, this fulfills the 'no repeating values or groups' requirement of the first normal form (1NF) but doesn't necessarily satisfy 1NF by itself).
 
 Additionally, if you need to rebalance the "Good" value, you only need to edit its definition in one file. Let's say that given 3 factions, each faction has 5 units that make use of a "small" buff, i.e. the "Good"-level buff. That's 15 units that can be instantly rebalanced by changing only one value.
-
-## Establishing the size of a game loop
-
-A chessboard has 64 squares, or 2^6. If we increase the chessboard size to 128, or 2^7, we know instinctively that we should scale the movement of knights, pawns, and kings. (Would scaling their movement by ^2 retain their utility?)
-
-It's also easy for us to agree that in _general_: 
-
-- All other things being equal, a large map in StarCraft where the players are situated at opposite ends, will take longer to finish than a smaller map.
-- A 3vs3 Pokemon battle will be shorter than a full 6vs6.
-
-> The average completion of a core loop, such as a battle, is measured in the **average number of moves** made to complete the loop.
-
-Let's say we want an RPG player-versus-player game to be about 3-5 minutes long.
-
-Let's say that player A and player B use similar characters: 
-
-| Character lineup | Atk | HP |
-| -------  | ------ | ------ |
-| Character 1 | 5    | 100 |
-| Character 2 | 9    | 75  |
-| Character 3 | 5    | 120 |
-| Character 4 | 7    | 90  |
-
-**Total HP**: 385
-
-**Total Atk**: 26
-
-Dividing the **total HP by the **total Atk** gives us an idea of how many turns you'd have to hit the opposite party.
-
-It comes out to 14.81, or **15 turns of solid attacking** to knock out 4 characters. There are 2 players. So at a minimum, 30 turns.
-
-Computing for game length:
-
-| Game length | Turns per minute | Seconds per turn |
-| -------  | ------ | ------ | 
-| 3 minutes long | 10 turns | 6 seconds |
-| 5 minutes long | 6 turns | 10 seconds |
-
-Inagine deciding on the actions of 4 characters in 6 seconds! It's evident that the HP is too high or the Atk is too low. Now that we know how to compute for the number of turns, let's try to keep it to 6 turns by reducing the HP.
-
-Let's get the total HP to end a party in 6 turns: 26 (total **Atk**) * 6 = 156. That's a reduction of 229 HP spread over the entire party, or a baseline of about 57HP per character. Some characters will have more HP and less **Atk**. But that's a problem for later. For now, let's take a look at the turns per minute and seconds per turn:
 
 
 
