slowly forming shape of blog

--- a/docs/src/content/docs/blog/devblog002.mdx
+++ b/docs/src/content/docs/blog/devblog002.mdx
@@ -24,9 +24,11 @@ _Square games in the 90s and early 2000s capped out at 255 for each whole number
 _tri-Ace games in the 90s and early 2000s capped out... wherever the hell they wanted to._
 tk retake this screenshot
 
-One method of figuring out the number is to build from an atom of gameplay. You'd build the core loop, or even a set of gameplay loops, giving yourself a deadline measured in weeks to less than a quarter to assemble a prototype with placeholders. In this scenario, you haven't figured out how big the game is going to be, nor how long it will take to get to the end, but you have to start somewhere.
+## Working forward and working backward
 
-Another method is to work backwards, or to begin with the end in mind, which in this case means a complete public beta. I've done this in professional (salaried) environments where a period of experimentation is baked into the costing and is part of a "real" timetable with milestones (deadlines) mapped to distributor and publisher events. The team is usually able to figure out the costing for the game and the size of content based on results during the experimentation phase. This method is not within this blog post's scope.
+One method of figuring out values for stats, is to prototype an atom of gameplay, working forward. You'd build the core loop, or even a set of gameplay loops, giving yourself a deadline measured in weeks to at most a quarter of a year, to assemble a prototype with placeholder art and animation pauses. In this scenario, you haven't figured out how big the game is going to be, nor how long it will take to get to the end, but you have to start somewhere.
+
+Another method is to work backwards, or to begin with the end in mind, which in this case means a complete public beta. I've done this in professional environments where a period of experimentation, about 3 months for a vertical slice of a midcore mobile game, is baked into the costing and is part of a "real" timetable with milestones (deadlines) mapped to distributor and publisher events. The team is usually able to figure out the costing for the game and the size of content based on results during the experimentation phase. By working with a final deadline, we are able to set a **cutoff line** that keeps scope creep at bay, among other things. This method is not within this blog post's scope; today we'll be focusing on the "working forward" approach.
 
 ## The basics of working forward
 
